outputs_20260331-060633-6e1f1786/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extalth\AppData\Local\Temp\tdd_build_wk1x3grn\src\egtm_atom_3_phase_inverter_pwm.c:12:
C:\Users\extalth\AppData\Local\Temp\tdd_build_wk1x3grn\include/IfxEgtm_Pwm.h:85:49: error: unknown type name 'IfxEgtm_Pwm_FastShutoffConfig'
   85 | typedef struct { IfxEgtm_Pwm_DeadTime deadTime; IfxEgtm_Pwm_FastShutoffConfig *fastShutOff; } IfxEgtm_Pwm_DtmConfig;
      |                                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_wk1x3grn\src\egtm_atom_3_phase_inverter_pwm.c: In function 'interruptEgtmAtom':
C:\Users\extalth\AppData\Local\Temp\tdd_build_wk1x3grn\src\egtm_atom_3_phase_inverter_pwm.c:27:33: error: 'MODULE_P03' undeclared (first use in this function); did you mean 'MODULE_P21'?
   27 | #define LED                    &MODULE_P03, 9u
      |                                 ^~~~~~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_wk1x3grn\src\egtm_atom_3_phase_inverter_pwm.c:65:23: note: in expansion of macro 'LED'
   65 |     IfxPort_togglePin(LED);
      |                       ^~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_wk1x3grn\src\egtm_atom_3_phase_inverter_pwm.c:27:33: note: each undeclared identifier is reported only once for each function it appears in
   27 | #define LED                    &MODULE_P03, 9u
      |                                 ^~~~~~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_wk1x3grn\src\egtm_atom_3_phase_inverter_pwm.c:65:23: note: in expansion of macro 'LED'
   65 |     IfxPort_togglePin(LED);
      |                       ^~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_wk1x3grn\src\egtm_atom_3_phase_inverter_pwm.c: In function 'initEgtmAtom3phInv':
C:\Users\extalth\AppData\Local\Temp\tdd_build_wk1x3grn\src\egtm_atom_3_phase_inverter_pwm.c:37:34: error: 'IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT' undeclared (first use in this function)
   37 | #define PHASE_U_LS             (&IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT)
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_wk1x3grn\src\egtm_atom_3_phase_inverter_pwm.c:94:62: note: in expansion of macro 'PHASE_U_LS'
   94 |     output[0].complementaryPin      = (IfxEgtm_Pwm_ToutMap *)PHASE_U_LS;
      |                                                              ^~~~~~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_wk1x3grn\src\egtm_atom_3_phase_inverter_pwm.c:27:33: error: 'MODULE_P03' undeclared (first use in this function); did you mean 'MODULE_P21'?
   27 | #define LED                    &MODULE_P03, 9u
      |                                 ^~~~~~~~~~
C:\Users\extalth\AppData\Local\Temp\tdd_build_wk1x3grn\src\egtm_atom_3_phase_inverter_pwm.c:206:30: note: in expansion of macro 'LED'
  206 |     IfxPort_setPinModeOutput(LED, IfxPort_OutputMode_pushPull, IfxPort_OutputIdx_general);
      |                              ^~~

In file included from C:\Users\extalth\AppData\Local\Temp\tdd_build_wk1x3grn\mocks\mock_egtm_atom_3_phase_inverter_pwm.c:7:
C:\Users\extalth\AppData\Local\Temp\tdd_build_wk1x3grn\include/IfxEgtm_Pwm.h:85:49: error: unknown type name 'IfxEgtm_Pwm_FastShutoffConfig'
   85 | typedef struct { IfxEgtm_Pwm_DeadTime deadTime; IfxEgtm_Pwm_FastShutoffConfig *fastShutOff; } IfxEgtm_Pwm_DtmConfig;
      |                                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
